src/objects/Apttus_Config2__TempRelateData__c.object
<CustomObject>
    <description>Temporary object for capturing the user selected asset line items which will be converted to related line items.</description>
    <fields>
        <fullName>Apttus_Config2__AssetLineItemId__c</fullName>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Temp Relate Data</relationshipLabel>
        <relationshipName>TempRelateData</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationId__c</fullName>
        <label>Product Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Temp Relate Data</relationshipLabel>
        <relationshipName>TempRelateData</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentBundleNumber__c</fullName>
        <description>Represents the parent bundle number associated with the child bundle</description>
        <inlineHelpText>Represents the parent bundle number associated with the child bundle</inlineHelpText>
        <label>Parent Bundle Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PrimaryLineNumber__c</fullName>
        <description>Represents the unique number for each temp relate data</description>
        <inlineHelpText>Represents the unique number for each temp relate data</inlineHelpText>
        <label>Primary Line Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Temp Relate Data</label>
    <nameField>
        <displayFormat>TD-{0000000000}</displayFormat>
        <label>Relate Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp Relate Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>